--- a/public/stealjs/appl/testapp_dev.html
+++ b/public/stealjs/appl/testapp_dev.html
@@ -18,6 +18,6 @@
     <body>
         <test-app>Loading...</test-app>
         
-        <script src="../../node_modules/steal/steal.js" main="stealjs/appl/main" data-env="development" deps-bundle></script>
+        <script src="../../node_modules/steal/steal.js" main="stealjs/appl/main" data-env="development"></script>
     </body>
 </html>
