Added aliases to ts config

--- a/public/stealjs/appl/testapp_dev.html
+++ b/public/stealjs/appl/testapp_dev.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="icon" href="../images/favicon.ico">
-        <title>Parcel Test Application</title>       
+        <title>StealJS Test Application</title>       
         <script type='text/javascript'>
             window.testit = (typeof __karma__ !== 'undefined');
             //true will generate a fatal error, only jasmine specs are run.
