--- a/public/stealjs/appl/testapp.html
+++ b/public/stealjs/appl/testapp.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="icon" href="../images/favicon.ico">
-        <title>Parcel Test Application</title>
+        <title>StealJs Test Application</title>
     </head>
     <body>
         <test-app>Loading...</test-app>
