--- a/public/brunch/appl/testapp_karma.html
+++ b/public/brunch/appl/testapp_karma.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Acceptance Testing-Vue</title>
+    <title>Acceptance Testing-Angular2</title>
     <link rel="stylesheet" href="../../dist_test/brunch/acceptance.css">
   </head>
   <body>
