--- a/public/parcel/appl/app_bootstrap.html
+++ b/public/parcel/appl/app_bootstrap.html
@@ -43,7 +43,8 @@
             </div>           
         </div>
     </nav>
-
+    <span id = "root">          
+    </span>
     <div class="container-fluid">
         <div id="side-nav" class="row" hidden="hidden">
             <nav class="col-md-2 bg-light rounded sidebar" id="top-menu">
