reverted fusebox to 3.7.1

--- a/public/fusebox/appl/app_bootstrap.html
+++ b/public/fusebox/appl/app_bootstrap.html
@@ -102,7 +102,7 @@
     <hr>
     <footer class="footer">
         <div class="container">
-            <span class="ml-5 small text-muted">Karma, Jasmine, Browserify and Angular Acceptance Test and Build Demo</span>
+            <span class="ml-5 small text-muted">Karma, Jasmine, Fusebox and Angular Acceptance Test and Build Demo</span>
             <span class="contact pull-right">
                     <a [routerLink]="['/contact']">
                         <small class="grey">Contact</small>
