--- a/public/fusebox/appl/testapp_dev.html
+++ b/public/fusebox/appl/testapp_dev.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Acceptance Testing-Angular</title>
     <link rel="icon" href="../images/favicon.ico">
-    <!--  -->
   </head>
   <body>
     <script type='text/javascript'>
@@ -16,6 +15,8 @@
             window.testOnly = false
     </script>
     <test-app>Loading....</test-app>
-     $bundles
+    <!-- built files will be auto injected -->
+     <script src="../vendor.js"></script>
+     <script src="../index.js"></script>
   </body>
 </html>
