--- a/public/fusebox/appl/testapp_karma.html
+++ b/public/fusebox/appl/testapp_karma.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -14,6 +15,8 @@
             window.testOnly = false
     </script>
     <test-app>Loading...</test-app>
-        $bundles
+    <!-- built files will be auto injected -->
+        <script src="/base/dist_test/fusebox/vendor.js"></script>
+        <script src="/base/dist_test/fusebox/index.js"></script>
   </body>
 </html>
