added fusebox v4-very fast

--- a/public/fusebox/static/index.html
+++ b/public/fusebox/static/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <META http-equiv="refresh" content="1;URL=appl/testapp_dev.html">
+        <META http-equiv="refresh" content="1;URL=../appl/testapp_dev.html">
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='./appl/testapp_dev.html'>link to tests</a>.
+        If you are not redirected automatically, follow this <a href='../appl/testapp_dev.html'>link to tests</a>.
     </body>
 </html>
