--- a/public/fusebox/appl/testapp_karma.html
+++ b/public/fusebox/appl/testapp_karma.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -15,8 +14,6 @@
             window.testOnly = false
     </script>
     <test-app>Loading...</test-app>
-    <!-- built files will be auto injected -->
-        <script src="/base/dist_test/fusebox/vendor.js"></script>
-        <script src="/base/dist_test/fusebox/index.js"></script>
+        $bundles
   </body>
 </html>
