Upgrade to angular11 and latest dependencies

--- a/public/brunch/appl/testapp_dev.html
+++ b/public/brunch/appl/testapp_dev.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="./images/favicon.ico">
     <title>Acceptance Testing-Angular2</title>
-    <link rel="stylesheet" href="acceptance.css">
+    <link rel="stylesheet" href="../acceptance.css">
   </head>
   <body>
     <script type='text/javascript'>
@@ -15,8 +15,8 @@
             window.testOnly = false
     </script>
      <test-app>Loading...</test-app>
-        <script src="vendor.js"></script>
-        <script src="acceptance.js"></script>
+        <script src="../vendor.js"></script>
+        <script src="../acceptance.js"></script>
         <script>require('brunch/appl/main')</script>
   </body>
 </html>
