--- a/public/webpack/appl/testapp_dev.html
+++ b/public/webpack/appl/testapp_dev.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Acceptance Testing-Angular</title>
     <link rel="icon" href="../images/favicon.ico">
+  </head>
   <body>
     <script type='text/javascript'>
             window.testit = (typeof __karma__ !== 'undefined')
