--- a/public/brunch/appl/testapp.html
+++ b/public/brunch/appl/testapp.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico">
   <title>Acceptance Testing-Angular2</title>
-  <link rel="stylesheet" href="acceptance.css">
+  <link rel="stylesheet" href="../acceptance.css">
 </head>
 
 <body>
    <test-app>Loading...</test-app>
-  <script src="vendor.js"></script>
-  <script src="acceptance.js"></script>
+  <script src="../vendor.js"></script>
+  <script src="../acceptance.js"></script>
   <script>require('brunch/appl/main')</script>
 </body>
 
