--- a/public/parcel/appl/testapp_dev.html
+++ b/public/parcel/appl/testapp_dev.html
@@ -18,6 +18,6 @@
     <body>
         <test-app>Loading...</test-app>
         
-        <script src="main.js"></script>
+        <script src="./main.js"></script>
     </body>
 </html>
