enhace: added jsoneditor to dodex-input and upgraded depend.

--- a/public/parcel/appl/app_bootstrap.html
+++ b/public/parcel/appl/app_bootstrap.html
@@ -99,7 +99,7 @@
         <!--/row-->
     </div>
     <!--/container-->
-
+    <div id="jsoneditor" class="editor"></div>
     <hr>
     <footer class="footer">
         <div class="container">
