--- a/public/parcel/appl/app_bootstrap.html
+++ b/public/parcel/appl/app_bootstrap.html
@@ -99,7 +99,7 @@
         <!--/row-->
     </div>
     <!--/container-->
-    <div id="jsoneditor" class="editor"></div>
+    <div id="jsoneditor" class="editor" style="z-index: -1"></div>
     <hr>
     <footer class="footer">
         <div class="container">
