parcel: upgrade Parcel to V2, upgraded dependencies

--- a/public/parcel/appl/testapp.html
+++ b/public/parcel/appl/testapp.html
@@ -12,6 +12,6 @@
     <body>
         <test-app>Loading...</test-app>
 
-        <script  type="text/javascript" src="main.js"></script>
+        <script  type="text/javascript" src="main.ts"></script>
     </body>
 </html>
