--- a/public/parcel/appl/testapp_dev.html
+++ b/public/parcel/appl/testapp_dev.html
@@ -7,17 +7,13 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="icon" href="../images/favicon.ico">
-        <title>Parcel Test Application</title>       
-        <script type='text/javascript'>
-            window.testit = (typeof __karma__ !== 'undefined');
-            //true will generate a fatal error, only jasmine specs are run.
-            window.testOnly = false;
-        </script>
+        <title>Parcel Test Application</title>
+        <script src="./testSetup.js"></script>
     </head>
 
     <body>
         <test-app>Loading...</test-app>
-        
-        <script src="./main.js"></script>
+
+        <script src="./main.ts"></script>
     </body>
 </html>
