Upgraded dependencies & added support for dodex-mess

--- a/public/brunch/appl/app_footer.html
+++ b/public/brunch/appl/app_footer.html
@@ -1,5 +1,5 @@
 
-<footer class="footer py-lg-3 bg-light">
+<footer class="footer py-lg-3 bg-footer">
     <div class="container">
         <span class="ml-lg-3 small text-muted">Karma, Jasmine, Brunch and Angular Acceptance Test and Build
             Demo</span>
