--- a/public/parcel/appl/testapp.html
+++ b/public/parcel/appl/testapp.html
@@ -25,17 +25,17 @@
             <test-login></test-login>
         </div>
     </nav>
-    <main class="container-fluid pb-1 flex-grow-1 d-flex flex-column flex-sm-row overflow-auto">
+    <main class="container-fluid pb-1 flex-grow-1 d-flex flex-column flex-sm-row overflow-auto pmain">
         <div class="row flex-grow-sm-1 flex-grow-0 w-100">
-            <div class="col-sm-2 flex-grow-sm-1 flex-shrink-1 flex-grow-0 pb-sm-0 pb-3">
-                <div class="bg-light border rounded-3 p-1 h-100">
+            <div class="col-sm-2 flex-grow-sm-1 flex-shrink-1 flex-grow-0 pb-sm-0 pb-3 pmain2">
+                <div class="bg-light border rounded-3 p-1 h-100 pmain">
                     <h6 class="d-none d-sm-block text-muted">Views</h6>
                     <ul class="nav nav-pills flex-sm-column flex-row mb-auto justify-content-between text-truncate">
                         <test-app></test-app>
                     </ul>
                 </div>
             </div>
-            <div class="col-sm overflow-auto h-100">
+            <div class="col-sm overflow-auto h-100 pmain">
                 <div class="page-bg border rounded-3 p-3">
                     <div id="container"></div>
                     <div id="main_container">
