--- a/public/webpack/appl/app_footer.html
+++ b/public/webpack/appl/app_footer.html
@@ -1,7 +1,7 @@
 
-<footer class="footer py-lg-3 bg-light">
+<footer class="footer py-lg-3 bg-footer">
     <div class="container">
-        <span class="ml-lg-3 small text-muted">Karma, Jasmine, Fusebox and Angular Acceptance Test and Build
+        <span class="ml-lg-3 small text-muted">Karma, Jasmine, Webpack and Angular Acceptance Test and Build
             Demo</span>
         <span class="contact float-end">
             <a [routerLink]="['/contact']">
